# amule

./: .clang-format  .gitignore  BUILD_CROSS_PLATFORM.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MODERNIZATION_COMPLETE.md  MODERNIZATION_GUIDE.md  MODERNIZATION_SUMMARY.md  NETWORK_PERFORMANCE_OPTIMIZATION.md  OPTIMIZATION_INTEGRATION_GUIDE.md  PERFORMANCE_MONITORING_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  SEARCH_ARCHITECTURE.md  SEARCH_STATE_IMPLEMENTATION.md  configure.ac  fast_debug_build.sh  fix_warnings.sh  format_codebase.sh  format_searchdlg.sh  incremental_build.sh  normalize_whitespace.sh  requirements.sh  runme.sh  setup_ccache.sh  test_magnet_progress.cpp  test_search.sh  test_search_debug.sh  verify_implementation.sh
cmake/: cryptopp.cmake  ip2country.cmake  options.cmake  source-vars.cmake  wx.cmake
cpp20_build/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
cpp20_build/docs/: cmake_install.cmake
docs/: DEVELOPER_MAGNET_PROGRESS.md  KADEMLIA_FEATURES.md  KADEMLIA_FEATURES_IMPLEMENTATION_SUMMARY.md  MAGNET_CONVERSION_PROGRESS.md  SEARCH_ARCHITECTURE.md  SEARCH_AUTORETRY_INTEGRATION.md  SEARCH_AUTORETRY_SUMMARY.md  SEARCH_AUTO_RETRY_DESIGN.md  UPNP_EXTERNAL_LIBRARY_ANALYSIS.md  UPNP_REFACTORING_PLAN.md
scripts/: search_max_pattern.sh  suppress_pixman_warnings.sh  test_magnet_implementation.sh  verify_final_implementation.sh
src/: CMakeLists.txt  ClientCreditsList.cpp  ClientList.cpp  ClientList.h  ClientTCPSocket.cpp  ColorFrameCtrl.cpp  DirectoryTreeCtrl.cpp  DownloadListCtrl.cpp  DownloadQueue.cpp  DownloadQueue.h  ED2KLink.cpp  ED2KLink.h  EMSocket.cpp  ExternalConn.cpp  GenericClientListCtrl.cpp  GuiEvents.cpp  GuiEvents.h  IP2Country.cpp  LibSocketAsio.cpp  Logger.cpp  MagnetGenerator.cpp  MagnetGenerator.h  MagnetProgressTracker.h  MagnetProtocolDetector.cpp  MagnetProtocolDetector.h  Makefile.am  MuleColour.cpp  MuleGifCtrl.cpp  MuleListCtrl.cpp  MuleVersion.h  OScopeCtrl.cpp  OtherFunctions.cpp  OtherFunctions.h  PartFile.cpp  PartFile.h  Preferences.cpp  Preferences.h  PrefsUnifiedDlg.cpp  SHAHashSet.h  SearchDlg.cpp  (+27 more)
src/geoip/: CMakeLists.txt  DatabaseFactory.cpp  DatabaseFactory.h  IGeoIPDatabase.h  IP2CountryManager.cpp  IP2CountryManager.h  MaxMindDBDatabase.cpp  MaxMindDBDatabase.h  UpdateScheduler.cpp  UpdateScheduler.h
super_fast_build/: CMakeCache.txt  cmake_install.cmake
tools/: CMakeLists.txt  geoip_download_helper.cpp
(+139 files in other folders)
